세팅 주문서 생성 기능 및 OS 메타데이터 추출 파이프라인 구현
## 신규 기능

### 세팅 주문서(템플릿) 생성
- SettingCreateRequest + AbstractProcessRequest 계층 — Jackson 다형성 역직렬화
  (BasicUpdateRequest / BasicSettingRequest / OSInstallationRequest / OSSettingRequest)
- PartitionRequest, UserRequest, TimezoneRequest 서브 DTO + Bean Validation
- SettingController JSON API (POST /pxe/v1/setting/api/new)
- templates/setting/new.html — Bootstrap 아코디언 기반 단계별 입력 폼,
  단계 간 order 의존성 자동 토글, Fetch API 기반 JSON 조립

### OS 메타데이터 / ISO 추출 파이프라인
- FileUploadController + FileUploadService — 20GB 청크 업로드 지원
- IsoPreparationService — 업로드된 ISO 파일 준비 및 검증
- CompsExtractionService + ExtractionTask(Service) — 비동기 추출 작업 관리
- extractor/ 하위 전략 패턴: CompsExtractorStrategy 인터페이스 +
  RHELCompsExtractor 구현체 + CompsExtractionResult
- OSEnvironmentRepository, OSPackageGroupRepository 신설
- OSInstallationViewDTO — 환경/패키지 그룹 뷰 모델
- AsyncConfig, RestClientConfig — 전역 설정 빈

### PXE 프로비저닝 단계 추적
- NodeStepExecution 엔티티 + StepExecutionStatus 열거형 + 전용 리포지토리
- ProvisioningScriptService 가 PENDING 단계 최저 order 조회 기반으로 동작

## 리팩토링

### SettingService 다형성/Stream 기반 구조 전환
- 기존: for-loop + instanceof + resolveBasicUpdate() / resolveOSInstallation()
  private 메서드로 모든 프로세스 타입 해석을 한 클래스에 집중
- 변경: SettingProcessResolver 전략 인터페이스 도입, 4개 @Component 구현체로
  책임 분리 (BasicUpdateResolver / BasicSettingResolver /
  OSInstallationResolver / OSSettingResolver)
- SettingService 는 List<SettingProcessResolver> 만 주입받아 Stream 파이프라인
  (map → sorted → toList) 으로 축소. 6개 Repository 의존성 전부 제거
- 참조 패턴: 기존 ProvisioningStrategy + ProvisioningScriptService 와 동일한
  List<Strategy> 주입 + supports() 기반 dispatch
- 부수 효과: 기존 OSSettingRequest 분기가 SettingProcess 리스트에 추가조차
  되지 않던 silent skip 버그 동시 수정
- settingRepository.save() 호출 활성화 (이전까지 주석 처리되어 있던 DB 영속화
  경로 연결)

## 향후 개발 방향

- LinuxInstallation.validateMountPoints 로직 버그 수정 — 현재 noneMatch 기반
  으로 "필수 마운트포인트 중 하나라도 있으면 통과"로 동작. 전량 포함 강제로
  교정 필요
- RockyLinuxInstallation.getKickstartScript() 실제 스크립트 조립 구현
  (현재 빈 문자열 반환)
- BasicSetting / OSSettin